--- a/template.html
+++ b/template.html
@@ -12,12 +12,12 @@
             background-color: aquamarine;
             border-radius: 5px;
             text-align: center;
-            width: 30%;
-            margin: 7px;
-            padding:7px;
+            width: 31%;
+            margin: 10px 5px 10px 17px;
+            padding:15px;
             box-shadow: 5px 5px 5px gray;
             float:left;
-            height:fixed;
+            height:300px;
         }
     </style>
 </head>
